manifests/istio/gateway-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microsvc-ingress
  namespace: microsvc
spec:
  gateways:
    - microsvc-gateway
  hosts:
    - "localhost"
  http:
    - match:
        - uri:
            prefix: /order
      route:
        - destination:
            host: order-service
            port:
              number: 8000
    - match:
        - uri:
            prefix: /inventory
      route:
        - destination:
            host: inventory-service
            port:
              number: 8000
    - match:
        - uri:
            prefix: /payment
      route:
        - destination:
            host: payment-service
            port:
              number: 8000
